AST: Start returning SelfProtocolConformances from ModuleDecl::lookupConformance()

Fixes <rdar://problem/49241923>, <https://bugs.swift.org/browse/SR-10015>.